--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,22 @@
     padding: 0;
 }
 
+html {
+    position: relative;
+}
+
 .container-entradas {
     min-height: 100vh;
+    margin-bottom:4rem; 
+}
+
+.cotainer-categorias {
+    
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding:10px;
 }
