--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,29 @@ html {
     position: relative;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 .container-entradas {
     min-height: 100vh;
-    margin-bottom:4rem; 
+    margin-bottom:4rem;
 }
 
 .cotainer-categorias {
